--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animejs": "^4.3.5",
     "axios": "^1.13.4",
     "framer-motion": "^12.29.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
     "react": "19.2.3",
